# Clash-Royale-Pod

./: .gitattributes  .gitignore  CLAUDE.md  GETTING_STARTED.md  Makefile  README.md  SPEC.md  flake.nix  pod_summary.md  pyproject.toml  workflow.md
.devcontainer/: Dockerfile  devcontainer.json  test_tools.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: TODO.md  data-quality.md  ev-validation.md  known-issues.md  latency-budget.md  latency-runs.jsonl  wave-2.5-holdout.txt  wave-2k-cv-results.csv  yolo-pod-audit.md
docs/artifacts/: 00-overview.html  01-blunder-detection.html  02-html-report.html  03-final-state.html
openspec/: config.yaml
scripts/: audit_card_names.py  audit_ev_features.py  audit_pod_videos.py  brev_train.sh  convert_katacr_labels.py  cv_sweep.py  detect_overlay.py  dump_katacr_classes.py  latency_audit.py  latency_report.py  smoke_arena15.sh  validate_side_inference.py
specs/001-analyze-video/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/crpod/: __init__.py  (+4 more)
tests/: test_blunders.py  test_card_names.py  test_cards.py  test_cli.py  test_elixir.py  test_ev_model.py  test_ev_target.py  test_hf_replay.py  test_hud_ocr.py  test_instrumentation.py  test_interactions.py  test_placement.py  test_report.py  test_side.py  test_tracker.py  test_train_holdout.py  test_video_pipeline.py
(+36 files in other folders)
