[project]
name = "crpod"
version = "0.1.0"
description = "Clash Royale Post-Game Analyzer — CV + statistical modeling pipeline"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.20",
    "huggingface-hub>=0.24",
    "joblib>=1.4",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.0",
    "opencv-python-headless>=4.10",
    "pandas>=2.2",
    "pyarrow>=17",
    "pytesseract>=0.3.13",
    "scipy>=1.14",
    "seaborn>=0.13.2",
    "statsmodels>=0.14",
    "supervision>=0.22",
    "torch>=2.4",
    "torchvision>=0.19",
    "ultralytics>=8.3",
]

[project.scripts]
crpod = "crpod.__main__:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "mypy>=1.11",
    "pytest>=8.3",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crpod"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["crpod"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
